chore(*): cleanup based on intellij suggestions